fix: edit layout shift issue

--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -43,6 +43,7 @@
 
 .block-content-wrapper > div:first-child {
   padding: 1px;
+  margin: -1px;
   overflow-x: auto;
 }
 
